<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">黑龙江绿色食品官网</string>
    <string name="action_settings">Settings</string>
    <string name="version">1.0</string>
    <!-- 底部菜单栏 -->
    <string name="main_menu_personcenter">个人中心</string>
    <string name="main_menu_home">首页</string>
    <string name="main_menu_search">搜索</string>
    <string name="main_menu_list">列表</string>
    <string name="main_menu_shopcart">购物车</string>

    <!-- 会员中心 -->
    <string name="person_title">会员中心</string>
    <string name="person_more">更多</string>
    <string name="person_order">订单详情</string>
    <string name="person_coupon">优惠券</string>
    <string name="person_info">会员信息</string>
    <string name="person_address">收货地址</string>
    <string name="person_loginout">注销</string>
    <string name="person_login">登录</string>
    <!-- 登录 -->
    <string name="person_login_title">登录</string>
    <string name="person_login_register">注册</string>
    <string name="person_login_username_hint">手机号/邮箱/昵称</string>
    <string name="person_login_password_hint">密码</string>
    <string name="person_login_forgetPwd">忘记密码？</string>

    <!-- 修改密码 -->
    <string name="person_forgetpwd_title">找回密码</string>
    <string name="person_forgetpwd_step1">验证身份</string>
    <string name="person_forgetpwd_step2">设置新密码</string>
    <string name="person_forgetpwd_step3">完成</string>
    <string name="person_forgetpwd_name">昵称：</string>
    <string name="person_forgetpwd_phone">手机号码：</string>
    <string name="person_forgetpwd_get">获取验证码</string>
    <string name="person_forgetpwd_valid">短信验证码：</string>
    <string name="person_forgetpwd_next">下一步</string>
    <!-- 注册 -->
    <string name="person_register_title">注册</string>
    <string name="person_register_username">用户名：</string>
    <string name="person_register_phone">手机号：</string>
    <string name="person_register_validmsg">验证码：</string>
    <string name="person_register_password">密码：</string>
    <string name="person_register_pwdagain">确认密码：</string>
    <string name="person_register_email">邮箱：</string>
    <!-- 更多 -->
    <string name="person_more_title">更多</string>
    <string name="person_more_mymessage">我的消息</string>
    <string name="person_more_push">推送消息</string>
    <string name="person_more_feedback">意见反馈</string>
    <string name="person_more_update_versioin">版本升级</string>
    <string name="person_more_clear_cache">清空缓存</string>
    <string name="person_more_about">关于我们</string>
    <string name="person_more_tel">客服电话</string>
    <string name="person_more_tel_num">4000838310</string>
    <!-- 订单 -->
    <string name="person_order_waitpay">待付款</string>
    <string name="person_order_waitsend">待发货</string>
    <string name="person_order_waitreceive">待收货</string>
    <string name="person_order_done">已完成</string>

    <!-- 收货地址 -->
 <string name="person_address_addnew">+ 新增收货地址</string>
 
 
  <item type="id" name="tag_first"></item>
    <item type="id" name="tag_second"></item>
      <item type="id" name="tag_three"></item>
    <item type="id" name="tag_four"></item>
</resources>