<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/system_gray"
    android:orientation="vertical" >

    <!-- 整个标题栏 -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_bg" >

        <!-- 后退按钮 -->

        <LinearLayout
            android:id="@+id/person_more_backbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/title_item_selector"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_gravity="left">

            <ImageView
                android:id="@+id/title_icon_left"
                style="@style/backStyle"
                android:src="@drawable/back" />
        </LinearLayout>

        <!-- title txt -->

        <TextView
            style="@style/titleTxtStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_more_title" />

       
    </FrameLayout>
    <!-- 上面的图片 -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/person_loginout_bg" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/system_padding">

            <!-- 我的消息 -->
            <RelativeLayout
                android:id="@+id/person_more_mymessage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/person_more_layout_bg"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/person_more_msgnum_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/person_more_mymessage"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView 
                    android:id="@+id/person_more_msg_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/person_more_msg_num"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_toRightOf="@id/person_more_msgnum_txt"
                    android:layout_marginLeft="10dp"
                    android:text="0"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/my_go" />
            </RelativeLayout>

            
<!-- 推送消息 -->
            <RelativeLayout
                android:id="@+id/person_more_push"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/system_padding"
                android:background="@drawable/person_more_layout_bg"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/person_more_push"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                
              <!--   <com.xqxy.hrht.base.WiperSwitch 
                    android:id="@+id/person_more_switchbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"/> --> 
                 
                     <Switch 
                    android:id="@+id/person_more_switchbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"/>
                <!-- 
                <ImageView
                    android:id="@+id/push_im"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp" />
                     -->
            </RelativeLayout>

            <!-- 意见反馈 -->
            <RelativeLayout
                android:id="@+id/person_more_sugest"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/person_more_layout_bg"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/person_more_feedback"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/my_go" />
            </RelativeLayout>
<!-- 版本升级 -->
            <RelativeLayout
                android:id="@+id/person_more_update"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/system_padding"
                android:background="@drawable/person_more_layout_bg"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/person_more_update_versioin"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

               
            </RelativeLayout>
<!-- 清空缓存 -->
            <RelativeLayout
                android:id="@+id/person_more_cache"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/person_more_layout_bg"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/person_more_clear_cache"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

               
            </RelativeLayout>
<!-- 关于我们 -->
            <RelativeLayout
                android:id="@+id/person_more_about"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/person_more_layout_bg"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/person_more_about"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/my_go" />
            </RelativeLayout>
<!-- 客服电话 -->
            <RelativeLayout
                android:id="@+id/person_more_tel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@drawable/person_more_layout_bg"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="@string/person_more_tel"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/person_more_phonetxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="4000-8383-10"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>